Spencil component done

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -14,5 +14,6 @@
 <script src="app-module.js"></script>
 <script src="main/designer/designer.module.js"></script>
 <script src="main/designer/designer.directive.js"></script>
+<script src="main/designer/components/stencil/stencil.directive.js"></script>
 </body>
 </html>
