--- a/scripts/main/designer/designer.template.html
+++ b/scripts/main/designer/designer.template.html
@@ -1,5 +1,5 @@
 <div class="designer-view">
-    <div>here will be menu component</div>
-    <div>here will be canvas component</div>
+    <div><my-stencil components="stencilComponents" on-select="addComponentToCanvas(component)"></my-stencil></div>
+    <div>here will be canvas component {{canvasComponents | json}}</div>
     <div>here will be description component</div>
 </div>
