Canvas component done

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -15,5 +15,8 @@
 <script src="main/designer/designer.module.js"></script>
 <script src="main/designer/designer.directive.js"></script>
 <script src="main/designer/components/stencil/stencil.directive.js"></script>
+<script src="main/view-components/type/type.directive.js"></script>
+<script src="main/designer/components/canvas/canvas.directive.js"></script>
+<script src="main/designer/components/canvas/canvas-component/canvas-component.directive.js"></script>
 </body>
 </html>
