Implemented hook for inspector component

--- a/scripts/main/designer/designer.template.html
+++ b/scripts/main/designer/designer.template.html
@@ -1,5 +1,5 @@
 <div class="designer-view">
     <div><my-stencil components="stencilComponents" on-select="addComponentToCanvas(component)"></my-stencil></div>
-    <div><my-canvas components="canvasComponents"></my-canvas></div>
+    <div><my-canvas components="canvasComponents" on-select="specifyInspectorComponent(component)"></my-canvas></div>
     <div>here will be description component</div>
 </div>
