working app version

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -18,5 +18,6 @@
 <script src="main/view-components/foo/foo.directive.js"></script>
 <script src="main/designer/components/canvas/canvas.directive.js"></script>
 <script src="main/designer/components/canvas/canvas-component/canvas-component.directive.js"></script>
+<script src="main/designer/components/inspector/inspector.directive.js"></script>
 </body>
 </html>
