--- a/scripts/main/designer/designer.template.html
+++ b/scripts/main/designer/designer.template.html
@@ -1,5 +1,14 @@
 <div class="designer-view">
-    <div><my-stencil components="stencilComponents" on-select="addComponentToCanvas(component)"></my-stencil></div>
-    <div><my-canvas components="canvasComponents" on-select="specifyInspectorComponent(component)"></my-canvas></div>
-    <div>here will be description component</div>
+    <div>
+        <my-stencil components="stencilComponents" on-select="addComponentToCanvas(component)"></my-stencil>
+    </div>
+
+    <div>
+        <my-canvas components="definitions.comments" on-select="specifyInspectorComponent($index)"></my-canvas>
+    </div>
+
+    <div>
+        <my-inspector ng-if="displayInspector"
+                      component="inspectorComponent"></my-inspector>
+    </div>
 </div>
