--- a/scripts/index.html
+++ b/scripts/index.html
@@ -16,8 +16,10 @@
 <script src="main/designer/designer.directive.js"></script>
 <script src="main/designer/components/stencil/stencil.directive.js"></script>
 <script src="main/view-components/foo/foo.directive.js"></script>
+<script src="main/view-components/foo/foo.constant.js"></script>
 <script src="main/designer/components/canvas/canvas.directive.js"></script>
 <script src="main/designer/components/canvas/canvas-component/canvas-component.directive.js"></script>
 <script src="main/designer/components/inspector/inspector.directive.js"></script>
+<script src="main/designer/components/inspector/inspector-component/inspector-component.directive.js"></script>
 </body>
 </html>
