--- a/scripts/index.html
+++ b/scripts/index.html
@@ -21,5 +21,6 @@
 <script src="main/designer/components/canvas/canvas-component/canvas-component.directive.js"></script>
 <script src="main/designer/components/inspector/inspector.directive.js"></script>
 <script src="main/designer/components/inspector/inspector-component/inspector-component.directive.js"></script>
+<script src="main/designer/components/inspector/inspector-component/Fields/Text/inspector-text-component.directive.js"></script>
 </body>
 </html>
