--- a/scripts/main/designer/designer.template.html
+++ b/scripts/main/designer/designer.template.html
@@ -4,7 +4,7 @@
     </div>
 
     <div>
-        <my-canvas components="definitions.comments" on-select="specifyInspectorComponent(component)"></my-canvas>
+        <my-canvas components="definitions.components" on-select="specifyInspectorComponent(component)"></my-canvas>
     </div>
 
     <div>
