field rendering working for all properties and presented in the app view

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -22,5 +22,6 @@
 <script src="main/designer/components/inspector/inspector.directive.js"></script>
 <script src="main/designer/components/inspector/inspector-component/inspector-component.directive.js"></script>
 <script src="main/designer/components/inspector/inspector-component/Fields/Text/inspector-text-component.directive.js"></script>
+<script src="main/designer/components/inspector/inspector-component/Fields/Number/inspector-number-component.directive.js"></script>
 </body>
 </html>
