Working app with correct setting json

--- a/scripts/main/designer/designer.template.html
+++ b/scripts/main/designer/designer.template.html
@@ -4,7 +4,7 @@
     </div>
 
     <div>
-        <my-canvas components="definitions.components" on-select="specifyInspectorComponent(component)"></my-canvas>
+        <my-canvas components="definitions.components" on-select="specifyInspectorComponent(component, $index)"></my-canvas>
     </div>
 
     <div>
@@ -13,4 +13,5 @@
     </div>
 </div>
 
-<pre>{{finalJSON| json}}</pre>
+<button ng-click="showFinalConfigArr()">Show final json</button>
+<pre>{{settArr | json}}</pre>
