app with added provider configs

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -12,11 +12,13 @@
 <script src="../node_modules/angular/angular.js"></script>
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="app-module.js"></script>
+<script src="main/view-components/provider/foo.config.js"></script>
+<script src="main/view-components/provider/registerComponents.service.js"></script>
 <script src="main/designer/designer.module.js"></script>
 <script src="main/designer/designer.directive.js"></script>
-<script src="main/designer/components/stencil/stencil.directive.js"></script>
 <script src="main/view-components/foo/foo.directive.js"></script>
 <script src="main/view-components/foo/foo.constant.js"></script>
+<script src="main/designer/components/stencil/stencil.directive.js"></script>
 <script src="main/designer/components/canvas/canvas.directive.js"></script>
 <script src="main/designer/components/canvas/canvas-component/canvas-component.directive.js"></script>
 <script src="main/designer/components/inspector/inspector.directive.js"></script>
